# calling

./: .gitignore  DEPLOYMENT_STEPS.md  Dockerfile  app.py  auth.py  bot.py  codebase_explanation.txt  database.py  docker-compose.yml  email_service.py  excel_service.py  greetings.txt  multi.py  nohup.out  package-lock.json  pcc-deploy.toml  pyproject.toml  restart_server.sh  semiworkingbot.py  server.py  start.sh  test_auth.py  test_greeting_fix.py  webhook.py  whatsapp_service.py  wp.py
backups/transcripts.20260113_142116/user_1/: 27COM2526_1849_300d0c4d-68db-4a94-a1b5-fed8d9e0d461.txt  27COM2526_1849_df53cb8f-dfa6-4520-8974-42427ef164a9.txt  INV-001_355f25e7-1678-4c94-b74d-2b20e590799a.txt
backups/transcripts.20260113_142116/user_2/: INV-001_350a682e-f74a-4bef-a61d-5e7ef4ff86ae.txt  INV-002_c137ba5c-37ee-4114-ba7b-f33c49e7e60f.txt  INV-003_dedd5e71-a43f-42b6-8b3e-4dd61f33495b.txt
frontend/: nohup.out  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  AppRouter.js
frontend/src/components/: Login.js  ProtectedRoute.js  UserManagement.js
frontend/src/context/: AuthContext.js
frontend/src/utils/: api.js
