[project]
name = "plivo-chatbot-dial-in"
version = "0.1.0"
description = "Plivo dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pipecat-ai[sarvam,websocket,cartesia,openai,silero,deepgram,runner,outbound,google]>=0.0.86",
  "pipecatcloud>=0.2.4",
  "openpyxl>=3.1.2",
  "streamlit>=1.52.2",
  "pyjwt>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "python-dateutil>=2.8.2",
]
